# Voxely

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  imgui.ini  pom.xml
assets/shaders/: Default.frag  Default.frag.spv  Default.vert  Default.vert.spv  triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
src/: VulkanContext.cpp  VulkanContext.hpp  Window.cpp  Window.hpp  main.cpp
src/Application/: Application.cpp  Application.hpp
src/Core/: Camera.hpp  CameraController.hpp  Paths.cpp  Paths.hpp
src/Graphics/: IndexBuffer.hpp  Mesh.hpp  MeshFactory.hpp  Primitives.hpp  Transform.hpp  UniformBufferObject.hpp  Vertex.hpp  VertexBuffer.hpp
src/Renderer/: IndexBuffer.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  UniformBuffer.cpp  UniformBuffer.hpp
src/Vulkan/: VulkanCommands.cpp  VulkanCommands.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanDebug.cpp  VulkanDescriptors.cpp  VulkanDescriptors.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanInstance.cpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanRendering.cpp  VulkanSurface.cpp  VulkanSwapChain.cpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp  VulkanSync.cpp  VulkanTypes.hpp
src/Vulkan/Commands/: VulkanCommands.cpp  VulkanCommands.hpp
src/Vulkan/Context/: VulkanContext.cpp  VulkanContext.hpp
src/Vulkan/Descriptors/: VulkanDescriptors.cpp  VulkanDescriptors.hpp
src/Vulkan/Devices/: VulkanDevice.cpp
src/Vulkan/Instance/: VulkanInstance.cpp  VulkanInstance.hpp
src/Vulkan/Pipeline/: VulkanPipeline.cpp  VulkanPipeline.hpp
src/Vulkan/Shaders/: ShaderTypes.hpp  VulkanShader.cpp  VulkanShader.hpp  VulkanShaderModule.cpp  VulkanShaderModule.hpp
src/Vulkan/Swapchain/: VulkanSwapchain.cpp
src/Vulkan/Synchronisation/: VulkanSync.cpp  VulkanSync.hpp
src/Vulkan/Textures/: TextureLoader.cpp  TextureLoader.hpp  VulkanTexture.hpp
src/Vulkan/Utils/: VulkanUtils.hpp
src/main/java/com/you/Voxely/: Main.java
src/main/resources/Data/Blocks/: Blocks.json
src/main/resources/Data/Saves/: config_terrain.json
src/main/resources/shaders/: DefaultFrag.glsl  DefaultVert.glsl
(+46 files in other folders)
